--- a/index.html
+++ b/index.html
@@ -1,80 +1,62 @@
 <!--by https://github.com/yumusb/DNSLog-Platform-Golang -->
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="zh-cn">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>DNSLOG Platform</title>
-    <meta name="keywords" content="dnslog,dnslog平台">
-    <meta name="description" content="一个无需注册就可以快速使用的DNSLog平台">
-    <style>
-        td {
-            text-align: center;
-            margin: auto
-        }
-        #domainarea p {
-            display: inline-block
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>DNSLOG Platform</title>
+  <meta name="keywords" content="dnslog,dnslog平台">
+  <meta name="description" content="一个无需注册就可以快速使用的DNSLog平台">
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/dashboard/">
+  <link href="/static/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/dashboard.css" rel="stylesheet">
 </head>
-
 <body>
-    <div id="header" style="text-align:center;padding-top:2%">
-        <p style="font-size:30px">DNSLOG平台</p>
-        <hr style="height:2px;border:none;border-top:2px dashed #87cefa"><br>
-    </div>
-    <script>
-    
-    function GetDomain() {
-    	if (key = localStorage.getItem("key"), null != key && 1 != confirm("获取新的子域名后将会丢失 " + key + "，请注意保存")) return !1;
-    	var e = window.XMLHttpRequest ? new XMLHttpRequest : new ActiveXObject("Microsoft.XMLHTTP");
-    	e.responseType = "json", e.onreadystatechange = function() {
-    		4 == e.readyState && 200 == e.status && (localStorage.setItem('key',e.response.domain), localStorage.setItem('token',e.response.token), document.getElementById("myDomain").innerHTML = e.response.domain, document.getElementById("token").innerHTML = e.response.token)
-    	}, e.open("GET", "/new_gen?t=" + Math.random(), !0), e.send()
-    }
-    function GetRecords() {
-        if(localStorage.getItem("token")==null){
-            alert("Get Domain First!!")
-            return ;
-        }
-    	var n = window.XMLHttpRequest ? new XMLHttpRequest : new ActiveXObject("Microsoft.XMLHTTP");
-    	n.onreadystatechange = function() {
-    		if (4 == n.readyState && 200 == n.status) {
-    			var e = n.responseText;
-    			if ("" == e || null == e || "null" == e) ktable = '<tr bgcolor="#ADD3EF"><th width="45%">DNS Query Record</th><th width="30%">IP Address</th><th width="25%">Created Time</th></tr><td colspan="3" align="center">No Data</td>', document.getElementById("myRecords").innerHTML = ktable;
-    			else {
-    				obj = JSON.parse(e), table = '<tr bgcolor="#ADD3EF"><th width="45%">DNS Query Record</th><th width="30%">IP Address</th><th width="25%">Created Time</th></tr>';
-    				for (var t = Object.keys(obj).length - 1; t >= (0 < Object.keys(obj).length - 10 ? Object.keys(obj).length - 10 : 0); t--) table = table + "<tr><td>" + obj[t].subdomain + "</td><td>" + obj[t].ip + "</td><td>" + obj[t].time + "</td></tr>";
-    				document.getElementById("myRecords").innerHTML = table
-    			}
-    		}
-    	}, n.open("GET", "/" + localStorage.getItem("token") + "?t=" + Math.random(), !0), n.send()
-    } </script>
-
-    <div id="content" style="text-align:center"><button type="button" onclick="GetDomain()">Get
-            SubDomain</button><button type="button" onclick="GetRecords()">Refresh Record</button><br>
-        <div id="domainarea">🌐:<p id="myDomain"></p>&nbsp;&nbsp;🔑:<p id="token"></p>
+  <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-md-12 col-lg-12 me-0 px-3">DNSLOG</a>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+      <main class="col-md-10 offset-md-1">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+          <h1 class="h2">Domain</h1>
         </div>
-        <center>
-            <table id="myRecords" width="700" border="0" cellpadding="5" cellspacing="1" bgcolor="#EFF3FF"
-                style="word-break:break-all;word-wrap:break-all">
-                <tbody>
-                    <tr bgcolor="#ADD3EF">
-                        <th width="45%">DNS Query Record</th>
-                        <th width="30%">IP Address</th>
-                        <th width="25%">Created Time</th>
-                    </tr>
-                    <tr>
-                        <td colspan="3" align="center">No Data</td>
-                    </tr>
-                </tbody>
-            </table>
-        </center>
+        <p class="lead">
+
+          <div class="form-group">
+            <label>Domains</label>
+            <select class="form-control" id="domains">
+            </select>
+          </div>
+        </p>
+        <p class="lead">subdomain:<span id="myDomain"></span><br>token:<span id="token"></span>
+        </p>
+        <button type="button" class="btn btn-primary" onclick="GetSubDomain()">Get Sub Domain</button>
+        <button type="button" class="btn btn-secondary" onclick="GetRecords()">Get Results</button>
+        <em>(Click to Copy)</em>
+        <div
+          class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+          <h1 class="h2">Results</h1>
+        </div>
+        <div class="table-responsive">
+          <table class="table table-striped table-sm">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Record</th>
+                <th scope="col">Host</th>
+                <th scope="col">Time</th>
+              </tr>
+            </thead>
+            <tbody id="myRecords">
+            </tbody>
+          </table>
+        </div>
+      </main>
     </div>
-    <script>key = localStorage.getItem("key"), token = localStorage.getItem("token"), null != key && null != token && (document.getElementById("myDomain").innerHTML = key, document.getElementById("token").innerHTML = token, GetRecords())</script>
-    <div style="text-align:center;margin:0 auto;bottom:100px;width:99.6%;padding-top:3%">
-        <hr style="height:2px;border:none;border-top:2px dashed #87cefa"><br>
-        <center><span style="color:#add3ef">Copyright&copy;2021 DNSLOG Platform All Rights Reserved.</span></center>
-    </div>
+  </div>
+  <script src="/static/main.js?v20211217"></script>
 </body>
 
 </html>
